CustomObjects/objects/invoiceit_s__Refund__c.object
<CustomObject>
    <fields>
        <fullName>invoiceit_s__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>Refunds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Currency__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Currency</label>
        <referenceTo>invoiceit_s__Currency__c</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>Refunds</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Exchange_Rate_Applied__c</fullName>
        <label>Exchange Rate Applied</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Refund_Amount__c</fullName>
        <label>Refund Amount</label>
        <summarizedField>invoiceit_s__Refund_Line__c.invoiceit_s__Refund_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>invoiceit_s__Refund_Line__c.invoiceit_s__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>invoiceit_s__Refund_Line__c.invoiceit_s__Refund__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Refund_Date__c</fullName>
        <label>Refund Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Refund_Description__c</fullName>
        <label>Refund Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Refunded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Refund</label>
    <listViews>
        <fullName>invoiceit_s__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{000}</displayFormat>
        <label>Refund Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refunds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>